Copyright (C) 2022 LANNOCC (Shawn A. Wilson [lannocc@yahoo.com])
@%@~LICENSE:MIT~@%@

saw_080222_1 - Working on new matrix-based universal screen mapping.

saw_080122_3 - Start to play with multiple windows.

saw_080122_2 - Let run() be wrapped. User setup should happen in init().

saw_080122_1 - Fix for python 3.8.

saw_073122_3 - Fix ctrl-c interrupt on Windows.

saw_073122_2 - Tested and working on Linux and Win7.

saw_073122_1 - Text scrolling and justification, window resizing.

saw_073022_10 - Linux: Improved mouse responsiveness.

saw_073022_9 - Windows: Fix unreliable mouse position while scrolling.

saw_073022_8 - Version bump: tested on Linux and Win7.

saw_073022_7 - Window movement (Windows).

saw_073022_6 - Window movement (Linux).

saw_073022_5 - Version bump: tested on Linux and Win7.

saw_073022_4 - Print containment on Windows.

saw_073022_3 - Normalized mouse input across platforms.

saw_073022_2 - Mouse input on Windows.

saw_073022_1 - Input wrangling and exception propagation.

saw_072922_3 - Version bump: tested on Linux and Win7.

saw_072922_2 - Beginning Windows backend.

saw_072922_1 - A possible approach to multiple backends.

saw_072822_6 - Some window fun.

saw_072822_5 - Bump version for pip platform dependency test.

saw_072822_4 - Test commit (turned on GPG sign in Windows).

saw_072822_3 - Add Windows support to mouse test script.

saw_072822_2 - Add a mouse test script.

saw_072822_1 - Initial commit (just termio.py from my vipy project).
